# bubble-shooter-game

./: README.md  brick-bubble-shooter.cabal
src/: Control.hs  Main.hs  Model.hs  View.hs
src/Model/: Board.hs  FlyingBall.hs  Player.hs  Score.hs
tests/: Test.hs
