name:                brick-bubble-shooter
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
-- author:              
-- maintainer:          
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable brick-bubble-shooter
  main-is:             Main.hs
  build-depends:       base >=4.9, 
                       random >=1.1 && <1.2,
                       containers,
                       vty, 
                       brick,
                       vector,
                       linear,
                       matrix
  hs-source-dirs:      src
  other-modules:       View, 
                       Control,
                       Model, 
                       Model.Board,
                       Model.Score,
                       Model.Player,
                       Model.FlyingBall
		       
  default-language:    Haskell2010
  ghc-options:       -W -threaded -O2


Library
  ghc-options:        -W -O2
  build-depends:       base >=4.9, 
                       random >=1.1 && <1.2,
                       containers,
                       vty, 
                       brick,
                       vector,
                       linear,
                       matrix
  exposed-modules:    View, 
                       Control,
                       Model, 
                       Model.Board,
                       Model.Score,
                       Model.Player,
                       Model.FlyingBall
  Default-Extensions: OverloadedStrings

  -- other-extensions:
  build-depends:       base,
                       parsec, 
                       containers, 
                       QuickCheck,
                       mtl
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  default-language: Haskell98
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  ghc-options:       -W -threaded -O2
  main-is:           Test.hs
  build-depends:    base, 
                    containers, 
                    mtl,
                    filepath,
                    QuickCheck,
                    tasty,
                    tasty-hunit,
                    tasty-quickcheck,
                    process,
                    brick-bubble-shooter


